2012-04-12  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amsamba.pl: Create incremental empty archive.

2012-04-11  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer.pm (make_new_tape_label): Fix error return.
	* perl/Amanda/Taper/Scribe.pm ($_user_msg_fn): Improve message if tape
	  is relabeled with a new label.
	* perl/Amanda/ScanInventory.pm: Set relabeled.
	* installcheck/Amanda_Changer.pl: Fix for new message.

2012-04-11  Jean-Louis Martineau <martineau@zmanda.com>
	Patch by Nathan Stratton Treadway
	* device-src/vfs-device.c: Improve message for MAX_VOLUME_USAGE.
	* installcheck/taper.pl: Fix.

2012-04-11  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amgtar.8.xml: s/APPLCIATION/APPLICATION/

2012-04-06  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/ampgsql.pl: psql /could not connect to server/
	  message result in STRANGE.

2012-04-06  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/ScanInventory.pm: Fix for label not matching labelstr.

2012-04-06  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/device.c (device_get_bytes_written): New function.
	* device-src/device.h (device_get_bytes_written): New prototype.
	* device-src/ndmp-device.c, device-src/rait-device.c,
	  device-src/s3-device.c, device-src/tape-device.c,
	  device-src/vfs-device.c: Implement get_bytes_written.
	* device-src/xfer-dest-taper-cacher.c,
	  device-src/xfer-dest-taper-splitter.c: Use device_get_bytes_written.
	* perl/Amanda/Device.swg: Swig device_get_bytes_written.

2012-04-05  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3-device.c: New CLIENT_ID, CLIENT_SECRET and
	  REFRESH_TOKEN properties. Handle OAUTH2.
	* device-src/s3.c: Handle OAUTH2.
	* device-src/s3.h (S3_api): Add S3_API_OAUTH2.
	* man/xml-source/amanda-devices.7.xml: Document new CLIENT_ID,
	  CLIENT_SECRET and REFRESH_TOKEN properties.

2012-04-05  Jean-Louis Martineau <martineau@zmanda.com>