@@ -488,6 +488,7 @@ typedef enum {
     CNF_TAPERSCAN,
     CNF_MAX_DLE_BY_VOLUME,
     CNF_EJECT_VOLUME,
+    CNF_TMPDIR,
     CNF_CNF /* sentinel */
 } confparm_key;
 
