@@ -145,7 +145,8 @@ APPLY(CNF_TAPER_PARALLEL_WRITE)\
 APPLY(CNF_RECOVERY_LIMIT) \
 APPLY(CNF_INTERACTIVITY) \
 APPLY(CNF_TAPERSCAN) \
-APPLY(CNF_EJECT_VOLUME)
+APPLY(CNF_EJECT_VOLUME) \
+APPLY(CNF_TMPDIR)
 
 amglue_add_enum_tag_fns(confparm_key);
 amglue_add_constants(FOR_ALL_CONFPARM_KEY, confparm_key);
